// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/AspectRatio Cinemascope smoke-test 1`] = `
<div class="w-1/2">
  <div data-radix-aspect-ratio-wrapper
       style="position: relative; width: 100%; padding-bottom: 42.5532%;"
  >
    <div class="bg-slate-50 dark:bg-slate-800"
         style="position: absolute; inset: 0px;"
    >
      <img alt="Placeholder Alt Text"
           class="rounded-md object-cover"
           src="https://placehold.co/1000"
      >
    </div>
  </div>
</div>
`;

exports[`Design System/Core/AspectRatio Default smoke-test 1`] = `
<div class="w-1/2">
  <div data-radix-aspect-ratio-wrapper
       style="position: relative; width: 100%; padding-bottom: 56.25%;"
  >
    <div class="bg-slate-50 dark:bg-slate-800"
         style="position: absolute; inset: 0px;"
    >
      <img alt="Placeholder Alt Text"
           class="rounded-md object-cover"
           src="https://placehold.co/1000"
      >
    </div>
  </div>
</div>
`;

exports[`Design System/Core/AspectRatio Landscape smoke-test 1`] = `
<div class="w-1/2">
  <div data-radix-aspect-ratio-wrapper
       style="position: relative; width: 100%; padding-bottom: 75%;"
  >
    <div class="bg-slate-50 dark:bg-slate-800"
         style="position: absolute; inset: 0px;"
    >
      <img alt="Placeholder Alt Text"
           class="rounded-md object-cover"
           src="https://placehold.co/1000"
      >
    </div>
  </div>
</div>
`;

exports[`Design System/Core/AspectRatio Square smoke-test 1`] = `
<div class="w-1/2">
  <div data-radix-aspect-ratio-wrapper
       style="position: relative; width: 100%; padding-bottom: 100%;"
  >
    <div class="bg-slate-50 dark:bg-slate-800"
         style="position: absolute; inset: 0px;"
    >
      <img alt="Placeholder Alt Text"
           class="rounded-md object-cover"
           src="https://placehold.co/1000"
      >
    </div>
  </div>
</div>
`;
